# bazel-gazelle

./: extensions.md  go.mod  go.sum
internal/: gazelle_binary.bzl  go_repository_test.go  go_repository_tools_srcs.bzl
internal/bzlmod/: go_deps.bzl
tests/bcr/go_mod/: MODULE.bazel
tests/bcr/go_mod/pkg/: pkg_test.go
tests/bcr/go_mod/test_dep/: MODULE.bazel  test.go
tests/bcr/go_work/: MODULE.bazel
tests/bcr/go_work/pkg/: pkg_test.go
walk/: BUILD.bazel  read_dir.go  read_dir_darwin.go  trie.go  walk.go  zsyscall_darwin.go  zsyscall_darwin_amd64.1_13.s
