load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "walk",
    srcs = [
        "config.go",
        "read_dir.go",
        "read_dir_darwin.go",
        "walk.go",
        "zsyscall_darwin.go",
        "zsyscall_darwin_amd64.1_13.s",
        "zsyscall_darwin_arm64.1_13.s",
    ],
    importpath = "github.com/bazelbuild/bazel-gazelle/walk",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//flag",
        "//rule",
        "@com_github_bmatcuk_doublestar_v4//:doublestar",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "walk_test",
    srcs = [
        "config_test.go",
        "walk_test.go",
    ],
    embed = [":walk"],
    deps = [
        "//config",
        "//rule",
        "//testtools",
        "@com_github_bmatcuk_doublestar_v4//:doublestar",
        "@com_github_google_go_cmp//cmp",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "config.go",
        "config_test.go",
        "read_dir.go",
        "read_dir_darwin.go",
        "walk.go",
        "walk_test.go",
        "zsyscall_darwin.go",
        "zsyscall_darwin_amd64.1_13.s",
        "zsyscall_darwin_arm64.1_13.s",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":walk",
    visibility = ["//visibility:public"],
)
